<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView_user_input_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_user_input"
        android:textColorHint="@color/colorDivider"
        android:inputType="textPersonName"
        android:text="@string/text_empty"
        android:textColor="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView_pass_input_form"
        android:textColor="@color/colorDivider"
        android:textColorHint="@color/colorDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/text_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/textView_user_input_main"
        app:layout_constraintStart_toStartOf="@+id/textView_user_input_main"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_input_main" />

    <Button
        android:id="@+id/button_login_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:text="@string/text_btn_login"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textView_pass_input_form"
        app:layout_constraintStart_toStartOf="@+id/textView_pass_input_form"
        app:layout_constraintTop_toBottomOf="@+id/textView_pass_input_form" />

    <Button
        android:id="@+id/button_register_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/colorSecondaryText"
        android:text="@string/text_btn_register"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/button_login_main"
        app:layout_constraintStart_toStartOf="@+id/button_login_main"
        app:layout_constraintTop_toBottomOf="@+id/button_login_main" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/colorDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_register_main"
        app:layout_constraintBottom_toTopOf="@+id/button_register_main"
        app:layout_constraintEnd_toEndOf="@+id/button_register_main"
        app:layout_constraintStart_toStartOf="@+id/button_register_main" />

</androidx.constraintlayout.widget.ConstraintLayout>