<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView_user_input_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_user_input"
        android:inputType="textPersonName"
        android:text="@string/text_empty"
        android:textColor="@color/colorDivider"
        android:textColorHint="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textView_pass_input_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorDivider"
        android:textColorHint="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="@+id/textView_user_input_form"
        app:layout_constraintStart_toStartOf="@+id/textView_user_input_form"
        app:layout_constraintTop_toBottomOf="@+id/textView_user_input_form" />

    <EditText
        android:id="@+id/textView_password_input_confirm_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_password_input_confirm"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorDivider"
        android:textColorHint="@color/colorDivider"
        app:layout_constraintEnd_toEndOf="@+id/textView_pass_input_form"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_pass_input_form"
        app:layout_constraintTop_toBottomOf="@+id/textView_pass_input_form" />

    <Button
        android:id="@+id/button_register_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colorAccent"
        android:text="@string/text_btn_register"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textView_password_input_confirm_form"
        app:layout_constraintStart_toStartOf="@+id/textView_password_input_confirm_form"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_input_confirm_form" />

</androidx.constraintlayout.widget.ConstraintLayout>