<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65sp"
        android:layout_height="65sp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/text_empty"
        android:src="@drawable/escudo_penarol"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:padding="30dp"/>

    <TextView
        android:id="@+id/text_splash_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220sp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/text_creator"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>